--- a/src/index.css
+++ b/src/index.css
@@ -49,3 +49,12 @@ html {
 .animate-scroll-reverse {
   animation: scroll-reverse 25s linear infinite;
 }
+
+/* Hide scrollbar */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
